k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app
  namespace: todo-app
spec:
  ingressClassName: nginx
  rules:
    - host: 127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-frontend
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  name: http
